Reinstate benchmarks, without json4s