@@ -143,3 +143,13 @@ lazy val json = Project(id = "content-api-models-json", base = file("json"))
     ),
     mappings in (Compile, packageDoc) := Nil
   )
+
+lazy val benchmarks = Project(id = "benchmarks", base = file("benchmarks"))
+  .dependsOn(json, scala)
+  .settings(commonSettings)
+  .enablePlugins(JmhPlugin)
+  .settings(
+    libraryDependencies += "com.google.guava" % "guava" % "19.0",
+    javaOptions in Jmh ++= Seq("-server", "-Xms4G", "-Xmx4G", "-XX:+UseG1GC", "-XX:-UseBiasedLocking"),
+    publishArtifact := false
+  )
